2011-07-25  James Hunt  <james.hunt@ubuntu.com>

	* init/job_process.c: job_process_spawn():
	  - Added dup2() return check.
	* TESTING.sessions: Updated with information on user sessions.
	* init/job_process.c:
	  - job_process_spawn():
	    - Change group before user and do it as early as possible.
	    - Ensure non-priv user is able to read script fd. Default system
	      behaviour is seemingly not consistent/defined, so force it
	      to be (LP: #813052)
	    - Ensure cwd for user job is home directory by default.
	  - job_process_error_read():
	    - Added handling for JOB_PROCESS_ERROR_SETUID and
	      JOB_PROCESS_ERROR_SETGID (LP: #807293).
	    - Added new entry for JOB_PROCESS_ERROR_CHOWN.
	* init/job_process.h:
	  - Added entry for JOB_PROCESS_ERROR_CHOWN in JobProcessErrorType.
	* init/man/init.5: Update for user jobs explaining behaviour of stanzas
	  which manipulate system resource limits and when the init
	  daemon reads the users job directory.
	* util/tests/test_user_sessions.sh: New script for testing user sessions
	  (NOTE: this is *NOT* run automatically).
	* init/session.c: session_from_dbus(): Handle case where a users
	  home directory is changed or where a uid is re-used for a
	  different username.
	* init/session.h: Updated comments for Session object.
	* init/man/init.5: Explain that symbolic links are not supported.

2011-07-22  James Hunt  <james.hunt@ubuntu.com>

	* util/man/initctl.8: Clarify semantics of restart(8)
	  command (LP: #731225).

2011-07-20  James Hunt  <james.hunt@ubuntu.com>

	* util/tests/test_initctl.c:
	  - test_show_config(): /* fall through :) */
	  - test_check_config(): Manually start and stop dbus-daemon to work
	    around change in dbus autostart behaviour which causes issues when
	    running the tests in a chroot and non-X11 environment (see dbus commit
	    cea055514a9dfc74e7f0515cf4a256da10a891bc).

2011-06-14  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.3
